--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -1099,7 +1099,7 @@
 								    <tr>
 								    	<td style="vertical-align:top; padding: 0 0 0 0">12.</td>
 								    	<td style="vertical-align:top; padding: 0 0 0 10">
-								    		List all the permutations for the letters $a,c,t$.
+								    		List all the permutations for the letters: a, c, t.
 								    	</td>
 								    </tr>
 								</table>
@@ -1108,8 +1108,8 @@
 								    	<td style="vertical-align:top; padding: 0 0 0 0">13.</td>
 								    	<td style="vertical-align:top; padding: 0 0 0 10">
 								    		<ol type="a" style="padding:0 10 0 20">
-								    			<li>How many permutations are there for the eight letters $a,c,f,g,i,t,w,x?$</li>
-								    			<li>Consider the permutations in (a). How many start with the letter $t$? How many start with the letter $t$ and end with the letter $c$?</li>
+								    			<li>How many permutations are there for the eight letters: a, c, f, g, i, t, w, x?</li>
+								    			<li>Consider the permutations in (a). How many start with the letter: t? How many start with the letter: t, and end with the letter: c?</li>
 								    		</ol>
 								    	</td>
 								    </tr>
@@ -1175,9 +1175,9 @@
 													$
 													\text{P}=
 													\begin{bmatrix}
-														a & c & t & & c & a & t \\
-														a & t & c & & c & t & a \\
-														t & c & a & & t & a & c \\
+														\text{a} & \text{c} & \text{t} & & \text{c} & \text{a} & \text{t} \\
+														\text{a} & \text{t} & \text{c} & & \text{c} & \text{t} & \text{a} \\
+														\text{t} & \text{c} & \text{a} & & \text{t} & \text{a} & \text{c} \\
 													\end{bmatrix}
 													$
 												</li>
@@ -2093,7 +2093,7 @@
 												</li>
 												<li>
 													If two of the eight people, say $A$ and $B$, do not get along well, how many different seatings are possible with $A$ and $B$ not sitting next to each other?
-													<div style="margin:5 0 5 0; text-align:center;">
+													<div style="margin:5 0 7 0; text-align:center;">
 														<canvas id="myCanvas5" width="400" height="85"></canvas>
 													    <script>
 													    	var canvas = document.getElementById('myCanvas5');
@@ -2144,6 +2144,7 @@
 													    	context.fillText("E", 6+260,35);
 													    </script>
 													</div>
+													<b>Note</b>: this result reveals that the combinatorics of seating/placing people around the square table is congruent with placing them about the circular table.
 												</li>
 											</ol>
 										</td>
@@ -2736,7 +2737,7 @@
 										<td style="vertical-align:top; padding:0 0 0 0">
 											<table style="width:100%">
 												<tr>
-													<td style="vertical-align:top; padding:0 0 0 0; border-right:1 solid lightgrey">
+													<td style="vertical-align:top; padding:0 20 0 0; border-right:1 solid lightgrey">
 														$
 														\begin{equation}
 															\begin{split}
@@ -2750,28 +2751,28 @@
 														\end{equation}
 														$
 													</td>
-													<td style="vertical-align:center; padding:13 0 0 25">
+													<td style="vertical-align:center; padding:13 0 0 20">
 														<table style="height:100px">
 															<tr>
-																<td style="vertical-align:top; padding:0 0 0 00">$\langle x_1x_2 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_1x_3 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_1x_4 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_1x_5 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_1x_6 \rangle$</td>
+																<td style="vertical-align:top; padding:0 0 0 00">$\{x_1,x_2\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_1,x_3\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_1,x_4\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_1,x_5\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_1,x_6\}$</td>
 															</tr>
 															<tr>
-																<td style="vertical-align:top; padding:0 0 0 00">$\langle x_2x_3 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_2x_4 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_2x_5 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_2x_6 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_3x_4 \rangle$</td>
+																<td style="vertical-align:top; padding:0 0 0 00">$\{x_2,x_3\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_2,x_4\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_2,x_5\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_2,x_6\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_3,x_4\}$</td>
 															</tr>
 															<tr>
-																<td style="vertical-align:top; padding:0 0 0 00">$\langle x_3x_5 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_3x_6 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_4x_5 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_4x_6 \rangle$</td>
-																<td style="vertical-align:top; padding:0 0 0 10">$\langle x_5x_6 \rangle$</td>
+																<td style="vertical-align:top; padding:0 0 0 00">$\{x_3,x_5\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_3,x_6\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_4,x_5\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_4,x_6\}$</td>
+																<td style="vertical-align:top; padding:0 0 0 10">$\{x_5,x_6\}$</td>
 															</tr>
 														</table>
 													</td>
@@ -3011,7 +3012,7 @@
 													<td style="vertical-align:top; padding:5 10; border:1 solid transparent; text-align:center">&nbsp;</td>
 												</tr>
 											</table>
-											<ol type="a" style="padding:0 0 0 20">
+											<ol type="a" style="padding:0 0 0 40">
 												<li>How many different symbols can we represent in the Braille system?</li>
 												<li>How many symbols have exactly three raised dots?</li>
 												<li>How many symbols have an even number of raised dots?</li>
@@ -3024,8 +3025,8 @@
 										<td style="vertical-align:top; padding:0 0 0 00">05.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
 											<ol type="a" style="padding:0 0 0 20">
-												<li>How many permutations of size three can one produce with the letters <code>m,r,a,f,t</code>?</li>
-												<li>List all the combinations of size three that result for the letters <code>m,r,a,f,t</code>.</li>
+												<li>How many size&ndash;three permutations can one produce with $x_1,x_2,x_3,x_4,x_5?$</li>
+												<li>List all the combinations of size three that result for the items $x_1,x_2,x_3,x_4,x_5$.</li>
 											</ol>
 										</td>
 									</tr>
@@ -3042,13 +3043,13 @@
 									<tr>
 										<td style="vertical-align:top; padding:0 0 0 00">07.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
-											A committee of twelve is to be selected from ten of type <code>&Gamma;</code> and twelve of type <code>&Sigma;</code>. In how many ways can the selecetion be carried out if
-											<ol type="a" style="margin:5 0 5 0; padding:0 0 0 20">
+											A committee of twelve is to be selected from ten of type $\lambda$ and ten of type $\lambda_1$. In how many ways can the selecetion be carried out if
+											<ol type="a" style="margin:5 0 5 20; padding:0 0 0 20">
 												<li>there are no restrictions?</li>
-												<li>there must be six <code>&Gamma;</code> and six <code>&Sigma;</code>?</li>
-												<li>there must be an even number of <code>&Sigma;</code>?</li>
-												<li>there must be more <code>&Sigma;</code> than <code>&Gamma;</code>?</li>
-												<li>there must be at least eight <code>&Gamma;</code>?</li>
+												<li>there must be six $\lambda$ and six $\lambda_1$?</li>
+												<li>there must be an even number of $\lambda_1$?</li>
+												<li>there must be more $\lambda_1$ than $\lambda$?</li>
+												<li>there must be at least eight $\lambda$?</li>
 											</ol>
 										</td>
 									</tr>
@@ -3060,11 +3061,115 @@
 								padding:0 0 0 20;
 								border-top:20 solid #f2f2f2;
 								border-left:1 solid #f2f2f2">
-						<div class="infscrll">
+							<div class="infscrll">
 								<table style="padding:0 20 0 0">
 									<tr>
 										<td style="vertical-align:top; padding:0 0 0 00">04.</td>
-										<td style="vertical-align:top; padding:0 0 0 10">The Braille system problem...</td>
+										<td style="vertical-align:top; padding:0 0 0 10">
+											For part (a), we need to consider the boundary conditions. That is to say, a symbol requires at least one raised dot, and all raised dots constitute a valid symbol. Hence,
+											<p>
+												$
+												\begin{array}
+													\text{(a)} \ 2^6-1=63. \ \square & \ \ \text{(b)} \ \displaystyle{6 \choose 3}=20. \ \square & \ \ \text{(c)} \ \displaystyle{6 \choose 2}+\displaystyle{6 \choose 4}+\displaystyle{6 \choose 6}=31. \ \square
+												\end{array}
+												$
+											</p>
+										</td>
+									</tr>
+								</table>
+								<table style="padding:30 20 0 0">
+									<tr>
+										<td style="vertical-align:top; padding:9 0 0 00">05.</td>
+										<td style="vertical-align:top; padding:0 0 0 10">
+											<ol type="a" style="padding:0 0 0 20">
+												<li>One can produce $P(5,3)=\displaystyle\frac{5!}{(5-3)!}=\frac{5!}{2!}=5\cdot4\cdot3=60$ permutations. $\square$</li>
+												<li>
+													There are $\displaystyle{5 \choose 3}=\frac{5!}{3!(5-3)!}=\frac{5!}{3!2!}=10$ such combinations. $\square$ They are:
+													$$
+													\begin{array}{ll}
+														\{x_1,x_2,x_3\} & \{x_1,x_2,x_4\} & \{x_1,x_2,x_5\} & \{x_2,x_3,x_4\} & \{x_2,x_3,x_5\} \\
+														\{x_3,x_4,x_5\} & \{x_3,x_4,x_1\} & \{x_3,x_5,x_1\} & \{x_5,x_4,x_1\} & \{x_5,x_4,x_2\}
+													\end{array}
+													$$
+												</li>
+											</ol>
+										</td>
+									</tr>
+								</table>
+								<table style="padding:20 20 0 0">
+									<tr>
+										<td style="vertical-align:top; padding:0 0 0 00">06.</td>
+										<td style="vertical-align:top; padding:0 0 0 10">
+											$\forall n > 1, \text{we have}$
+											$$
+											\begin{equation}
+												\begin{split}
+													{n \choose 2}+{n-1 \choose 2} 
+													&= \frac{n!}{2!(n-2)!}+\frac{(n-1)!}{2!(n-1-2)!} \\
+													&= \frac{n(n-1)!}{2}+\frac{(n-1)(n-2)}{2} \\
+													&= \bigg(\frac{1}{2}\bigg)(n)(n-1)+\bigg(\frac{1}{2}\bigg)(n-1)(n-2) \\
+													&= \bigg(\frac{1}{2}\bigg)(n-1)\big[n+(n-2)\big] \\
+													&= \bigg(\frac{1}{2}\bigg)(n-1)(2n-2) \\
+													&= \bigg(\frac{1}{2}\bigg)(2n^2-2n-2n+2) \\
+													&= \bigg(\frac{1}{\color{grey}{\cancel{2}}}\bigg)(\color{grey}{\cancel{2}})(n^2-2n+1) \\
+													&= n^2-2n+1 \\
+													&= (n-1)^2. \\
+													&\ \square
+												\end{split}
+											\end{equation}
+											$$
+											</ol>
+										</td>
+									</tr>
+								</table>
+								<table style="padding:10 20 10 0">
+									<tr>
+										<td style="vertical-align:top; padding:13 0 0 00">07.</td>
+										<td style="vertical-align:top; padding:00 0 0 10">
+											<table>
+												<tr>
+													<td style="padding:0 0 0 00">(a) $\text{S}_1=\displaystyle{20 \choose 12}. \ \square$</td>
+													<td style="padding:0 0 0 25">(b) $\text{S}_2=\displaystyle{10 \choose 6}{10 \choose 6}. \ \square$</td>
+												</tr>
+											</table>
+											<p style="margin:10 0 0 0">
+												$
+												\begin{equation}
+													\begin{split}
+														\text{(c) S}_3
+														&= \displaystyle {10 \choose 2}{10 \choose 10}[\lambda_1:2]+{10 \choose 4}{10 \choose 8}[\lambda_1:4]+\cdots+{10 \choose 10}{10 \choose 2}[\lambda_1:10] \\
+														&= \sum_{i=1}^5 {10 \choose 2i}{10 \choose 12-2i}. \\
+														&\ \square
+													\end{split}
+												\end{equation}
+												$
+											</p>
+											<p style="margin:10 0 0 0">
+												$
+												\begin{equation}
+													\begin{split}
+														\text{(d) S}_4
+														&= \displaystyle {10 \choose 7}{10 \choose 5}[\lambda_1:7]+{10 \choose 8}{10 \choose 4}[\lambda_1:8]+{10 \choose 9}{10 \choose 3}[\lambda_1:9] \\
+														& \ \ \ \ \ \ \ \ \ \ +{10 \choose 10}{10 \choose 2}[\lambda_1:10] \\
+														&= \sum_{i=7}^{10} {10 \choose i}{10 \choose 12-i}. \\
+														&\ \square
+													\end{split}
+												\end{equation}
+												$
+											</p>
+											<p style="margin:10 0 0 0">
+												$
+												\begin{equation}
+													\begin{split}
+														\text{(e) S}_5
+														&= \displaystyle {10 \choose 8}{10 \choose 4}[\lambda:8]+{10 \choose 9}{10 \choose 3}[\lambda:9]+{10 \choose 10}{10 \choose 2}[\lambda:10] \\
+														&= \sum_{i=8}^{10} {10 \choose i}{10 \choose 12-i}. \\
+														&\ \square
+													\end{split}
+												\end{equation}
+												$
+											</p>
+										</td>
 									</tr>
 								</table>
 							</div>
@@ -3074,7 +3179,7 @@
 				<table class="mySlides" style="margin:30 0 0 0; padding:0 0 0 0; width:100%; height:100%; border-collapse: collapse">
 					<tr>
 						<td style="vertical-align:top; width:50%; height:100%">
-							<table style="padding:10 0 10 20; color:lightgrey; font-family:'Avenir', 'light'; font-size:18; width:100%">
+							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
 									<td style="padding:0 0 0 150">
@@ -3092,7 +3197,7 @@
 										<td style="vertical-align:top; padding:0 0 0 00">08.</td>
 										<td style="vertical-align:top; padding:0 0 0 10">
 											In how many ways can a gambler draw five cards from a standard deck and get 
-											<ol type="a" style="margin:5 0 5 20; padding:0 0 0 20">
+											<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
 												<li>a flush (five cards of the same suit)?</li>
 												<li>four aces?</li> 
 												<li>four of a kind?</li>
