--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -3209,10 +3209,65 @@
 											</ol>
 										</td>
 									</tr>
+								</table>
+								<table style="padding:20 20 0 0">
 									<tr>
 							        	<td style="vertical-align:top; padding:0 0 0 0">09.</td>
 							        	<td style="vertical-align:top; padding:0 0 0 10">
-							        		Lorem ipsum...
+							        		How many bytes contain
+											<p style="margin:10 0 0 0">
+												(a) exactly two 1s &nbsp;&nbsp;&nbsp; (b) exactly four 1s &nbsp;&nbsp;&nbsp; (c) exactly six 1s &nbsp;&nbsp;&nbsp; (d) at least two 1s?
+											</p>
+							        	</td>
+							      	</tr>
+							    </table>
+							    <table style="padding:20 20 0 0">
+							      	<tr>
+							        	<td style="vertical-align:top; padding:0 0 0 0">10.</td>
+							        	<td style="vertical-align:top; padding:0 0 0 10">
+							        		How many ways are there to pick a five&ndash;person basketball team from twelve possible players? How many selections include the weakest and the strongest players?
+							        	</td>
+							      	</tr>
+								</table>
+								<table style="padding:20 20 0 0">
+							      	<tr>
+							        	<td style="vertical-align:top; padding:0 0 0 0">11.</td>
+							        	<td style="vertical-align:top; padding:0 0 0 10">
+							        		A student is to answer seven out of ten questions on an examination. In how many ways can they make their selection if
+							        		<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
+												<li>there are no resrictions?</li>
+												<li>they <u>must</u> answer the first two questions?</li> 
+												<li>they must answer at least four of the six first questions?</li>
+											</ol>
+							        	</td>
+							      	</tr>
+								</table>
+								<table style="padding:20 20 0 0">
+							      	<tr>
+							        	<td style="vertical-align:top; padding:0 0 0 0">12.</td>
+							        	<td style="vertical-align:top; padding:0 0 0 10">
+							        		In how many ways can twelve different books be distributed among four children so that
+							        		<ol type="a" style="margin:5 0 5 10; padding:0 0 0 20">
+												<li>each child gets three books?</li>
+												<li>the two oldest children get four books each and two youngest get two books each?</li> 
+												<li>they must answer at least four of the six first questions?</li>
+											</ol>
+							        	</td>
+							      	</tr>
+								</table>
+								<table style="padding:20 20 0 0">
+							      	<tr>
+							        	<td style="vertical-align:top; padding:0 0 0 0">13.</td>
+							        	<td style="vertical-align:top; padding:0 0 0 10">
+							        		How many arrangments of the letters in MISSISSIPPI have no consecutive Ss?
+							        	</td>
+							      	</tr>
+								</table>
+								<table style="padding:20 20 10 0">
+							      	<tr>
+							        	<td style="vertical-align:top; padding:0 0 0 0">14.</td>
+							        	<td style="vertical-align:top; padding:0 0 0 10">
+							        		A gym coach must select eleven seniors to play on a football team. If they can make their selection in 12,376 ways, how many seniors are eligible to play?
 							        	</td>
 							      	</tr>
 								</table>
@@ -3298,48 +3353,48 @@
 									          		<td style="vertical-align:top; padding:0 0 0 0">
 									          			<a class="pset" onclick="currentDiv(2)">1.1 &nbsp; The Rules of Sum and Product<br>1.2 &nbsp; Permutations</a>
 									          			<p style="margin:0 0 0 31">
-										          			<a class="pset1" onclick="currentDiv(2)">01</a>
-										          			<a class="pset1" onclick="currentDiv(2)">02</a>
-										          			<a class="pset1" onclick="currentDiv(2)">03</a>
-										          			<a class="pset1" onclick="currentDiv(2)">04</a>
-										          			<a class="pset1" onclick="currentDiv(2)">05</a>
-										          			<a class="pset1" onclick="currentDiv(3)">06</a>
-										          			<a class="pset1" onclick="currentDiv(3)">07</a>
-										          			<a class="pset1" onclick="currentDiv(3)">08</a>
-										          			<a class="pset1" onclick="currentDiv(3)">09</a>
-										          			<a class="pset1" onclick="currentDiv(4)">10</a>
-										          			<a class="pset1" onclick="currentDiv(4)">11</a>
-										          			<a class="pset1" onclick="currentDiv(4)">12</a>
+										          			<a class="pset1" onclick="currentDiv(02)">01</a>
+										          			<a class="pset1" onclick="currentDiv(02)">02</a>
+										          			<a class="pset1" onclick="currentDiv(02)">03</a>
+										          			<a class="pset1" onclick="currentDiv(02)">04</a>
+										          			<a class="pset1" onclick="currentDiv(02)">05</a>
+										          			<a class="pset1" onclick="currentDiv(03)">06</a>
+										          			<a class="pset1" onclick="currentDiv(03)">07</a>
+										          			<a class="pset1" onclick="currentDiv(03)">08</a>
+										          			<a class="pset1" onclick="currentDiv(03)">09</a>
+										          			<a class="pset1" onclick="currentDiv(04)">10</a>
+										          			<a class="pset1" onclick="currentDiv(04)">11</a>
+										          			<a class="pset1" onclick="currentDiv(04)">12</a>
 										          			<br>
-										          			<a class="pset1" onclick="currentDiv(2)">13</a>
-										          			<a class="pset1" onclick="currentDiv(2)">14</a>
-										          			<a class="pset1" onclick="currentDiv(2)">15</a>
-										          			<a class="pset1" onclick="currentDiv(2)">16</a>
-										          			<a class="pset1" onclick="currentDiv(2)">17</a>
-										          			<a class="pset1" onclick="currentDiv(3)">18</a>
-										          			<a class="pset1" onclick="currentDiv(3)">19</a>
-										          			<a class="pset1" onclick="currentDiv(3)">20</a>
-										          			<a class="pset1" onclick="currentDiv(3)">21</a>
-										          			<a class="pset1" onclick="currentDiv(4)">22</a>
-										          			<a class="pset1" onclick="currentDiv(4)">23</a>
-										          			<a class="pset1" onclick="currentDiv(4)">24</a>
+										          			<a class="pset1" onclick="currentDiv(04)">13</a>
+										          			<a class="pset1" onclick="currentDiv(05)">14</a>
+										          			<a class="pset1" onclick="currentDiv(05)">15</a>
+										          			<a class="pset1" onclick="currentDiv(05)">16</a>
+										          			<a class="pset1" onclick="currentDiv(05)">17</a>
+										          			<a class="pset1" onclick="currentDiv(05)">18</a>
+										          			<a class="pset1" onclick="currentDiv(06)">19</a>
+										          			<a class="pset1" onclick="currentDiv(06)">20</a>
+										          			<a class="pset1" onclick="currentDiv(06)">21</a>
+										          			<a class="pset1" onclick="currentDiv(06)">22</a>
+										          			<a class="pset1" onclick="currentDiv(06)">23</a>
+										          			<a class="pset1" onclick="currentDiv(07)">24</a>
 										          			<br>
-										          			<a class="pset1" onclick="currentDiv(3)">25</a>
-										          			<a class="pset1" onclick="currentDiv(3)">26</a>
-										          			<a class="pset1" onclick="currentDiv(3)">27</a>
-										          			<a class="pset1" onclick="currentDiv(4)">28</a>
-										          			<a class="pset1" onclick="currentDiv(4)">29</a>
-										          			<a class="pset1" onclick="currentDiv(4)">30</a>
-										          			<a class="pset1" onclick="currentDiv(3)">31</a>
-										          			<a class="pset1" onclick="currentDiv(3)">32</a>
-										          			<a class="pset1" onclick="currentDiv(3)">33</a>
-										          			<a class="pset1" onclick="currentDiv(4)">34</a>
-										          			<a class="pset1" onclick="currentDiv(4)">35</a>
-										          			<a class="pset1" onclick="currentDiv(4)">36</a>
+										          			<a class="pset1" onclick="currentDiv(07)">25</a>
+										          			<a class="pset1" onclick="currentDiv(07)">26</a>
+										          			<a class="pset1" onclick="currentDiv(07)">27</a>
+										          			<a class="pset1" onclick="currentDiv(07)">28</a>
+										          			<a class="pset1" onclick="currentDiv(07)">29</a>
+										          			<a class="pset1" onclick="currentDiv(08)">30</a>
+										          			<a class="pset1" onclick="currentDiv(08)">31</a>
+										          			<a class="pset1" onclick="currentDiv(08)">32</a>
+										          			<a class="pset1" onclick="currentDiv(08)">33</a>
+										          			<a class="pset1" onclick="currentDiv(08)">34</a>
+										          			<a class="pset1" onclick="currentDiv(08)">35</a>
+										          			<a class="pset1" onclick="currentDiv(08)">36</a>
 										          			<br>
-										          			<a class="pset1" onclick="currentDiv(4)">37</a>
-										          			<a class="pset1" onclick="currentDiv(4)">38</a>
-										          			<a class="pset1" onclick="currentDiv(4)">39</a>
+										          			<a class="pset1" onclick="currentDiv(09)">37</a>
+										          			<a class="pset1" onclick="currentDiv(09)">38</a>
+										          			<a class="pset1" onclick="currentDiv(09)">39</a>
 									          			</p>
 									          		</td>
 									          		<td style="vertical-align:top; padding:0 0 0 0">
@@ -3349,21 +3404,21 @@
 									          					<td style="vertical-align:top; padding:0 0 0 5">
 									          						<a class="pset">Combinations: The Binomial Theorem</a>
 												          			<br>
-												          			<a class="pset1" onclick="currentDiv(2)">01</a>
-												          			<a class="pset1" onclick="currentDiv(2)">02</a>
-												          			<a class="pset1" onclick="currentDiv(2)">03</a>
-												          			<a class="pset1" onclick="currentDiv(2)">04</a>
-												          			<a class="pset1" onclick="currentDiv(2)">05</a>
-												          			<a class="pset1" onclick="currentDiv(3)">06</a>
-												          			<a class="pset1" onclick="currentDiv(3)">07</a>
-												          			<a class="pset1" onclick="currentDiv(3)">08</a>
-												          			<a class="pset1" onclick="currentDiv(3)">09</a>
-												          			<a class="pset1" onclick="currentDiv(4)">10</a>
-												          			<a class="pset1" onclick="currentDiv(4)">11</a>
-												          			<a class="pset1" onclick="currentDiv(4)">12</a>
+												          			<a class="pset1" onclick="currentDiv(09)">01</a>
+												          			<a class="pset1" onclick="currentDiv(09)">02</a>
+												          			<a class="pset1" onclick="currentDiv(09)">03</a>
+												          			<a class="pset1" onclick="currentDiv(10)">04</a>
+												          			<a class="pset1" onclick="currentDiv(10)">05</a>
+												          			<a class="pset1" onclick="currentDiv(10)">06</a>
+												          			<a class="pset1" onclick="currentDiv(10)">07</a>
+												          			<a class="pset1" onclick="currentDiv(11)">08</a>
+												          			<a class="pset1" onclick="currentDiv(11)">09</a>
+												          			<a class="pset1" onclick="currentDiv(11)">10</a>
+												          			<a class="pset1" onclick="currentDiv(11)">11</a>
+												          			<a class="pset1" onclick="currentDiv(11)">12</a>
 												          			<br>
-												          			<a class="pset1" onclick="currentDiv(2)">13</a>
-												          			<a class="pset1" onclick="currentDiv(2)">14</a>
+												          			<a class="pset1" onclick="currentDiv(11)">13</a>
+												          			<a class="pset1" onclick="currentDiv(11)">14</a>
 												          			<a class="pset1" onclick="currentDiv(2)">15</a>
 												          			<a class="pset1" onclick="currentDiv(2)">16</a>
 												          			<a class="pset1" onclick="currentDiv(2)">17</a>
