--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -334,7 +334,7 @@
 							<div style="width:100%; height:20; background:#f2f2f2"></div>
 							<div class="t_contents">
 								<p style="font-size:25">Contents</p>
-								<table style="color:grey">
+								<table style="color:grey; font-size:15">
 									<tr>
 										<td style="vertical-align:top">1.</td>
 										<td style="padding-left:15px">
