--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -61,6 +61,7 @@
 
 		.MathJax:focus, .mjx-chtml:focus, .MathJax_SVG:focus {
    			outline:none;
+   			border: 1 solid #D1DCE9;
 		}
 
 		.t_contents {
