--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -62,6 +62,7 @@
 		.MathJax:focus, .mjx-chtml:focus, .MathJax_SVG:focus {
    			outline:none;
    			border: 1 solid #D1DCE9;
+   			padding: 2 2;
 		}
 
 		.t_contents {
@@ -117,7 +118,7 @@
 		    border-top: 1 solid #f2f2f2;
 		}
 		.infscrll_dc {
-		    height:605 !important;
+		    height:628 !important;
 		    overflow:scroll;
 		    font-size:15; 
 		    padding-top:20;
@@ -152,27 +153,23 @@
 		a.contents:hover{text-decoration: underline; cursor: default;}
 		i.fa{font-size: 16px;}
 		
-		/*
-		input [type="text"]:focus {
-			outline-color:red; 
-		}*/
-
-		/*input [type="submit"] {
-			color:grey;
-			margin-top:5;
-			font-size:11;
-			border-radius:0%; 
-			background:white; 
-			font-family:'Arial'; 
-			border:1 solid lightgrey; 
-			
+		input[type="search"]{
+			color:#aaa;
+			font-size: 13;
+			text-align: center;
+			font-family:'Avenir';
+			-webkit-appearance:caret;
+			border-radius: 0%!important;
 		}
-		input [type="submit"] :hover {
-			color: black; 
-			border: 1 solid grey; 
-			transition: color .1s;
+		.search{
+			color:#aaa;
+			background: transparent;
+			font-size: 13;
+			text-align: center;
+			font-family:'Avenir';
+			-webkit-appearance:caret;
+			border-radius: 0%!important;
 		}
-		*/
 
 		.dropdown {
 		    position: relative;
@@ -188,8 +185,8 @@
 		    top: 34;
 		    background: linear-gradient(#aaa, #D1D3D4);
 		    min-width: 1176;
-		    height: 695;
-		    padding: 7 51;
+		    height: 750;
+		    padding: 7 52;
 		    margin:0 0 0 -2;  
 			font-family:'Avenir', 'light'; 
 			font-size:18; 
@@ -332,7 +329,17 @@
 									width:50%; height: 100%;
 									cursor:default;
 									padding:0 0 0 0;">
-							<div style="width:100%; height:20; background:#f2f2f2"></div>
+							<div style="width:100%; background:#f2f2f2">
+								<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
+								<input type="search" class="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()">
+								<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light'; color:grey"></p>
+								<script>
+								function search_func() {
+								   var x = document.getElementById("clc_fe_s1");
+								   document.getElementById("search_res").innerHTML = "<br> >> " + x.value;
+								}
+								</script>
+							</div>
 							<div class="t_contents">
 								<p style="font-size:25">Contents</p>
 								<table style="color:grey; font-size:15">
@@ -649,12 +656,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="5" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -857,12 +872,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -1047,12 +1070,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -1211,12 +1242,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -1350,12 +1389,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -1513,12 +1560,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -1991,12 +2046,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -2415,12 +2478,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -2848,12 +2919,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
@@ -3183,12 +3262,20 @@
 							<table style="padding:10 0 10 20; color:#aaa; font-family:'Avenir', 'light'; font-size:18; width:100%">
 								<tr>
 									<td>Fundamental Principles of Counting</td>
-									<td style="padding:0 0 0 150">
-										<form action="index.html" style="padding:0 0 0 0; margin:0 0 0 0">
+									<td style="padding:2 0 0 80">
+										<div style="padding:0 0 0 0; margin:0 0 0 0">
 											<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
-											<input type="text" placeholder="&lambda; ..." class="search"
-													style="color:#aaa; font-size:12; padding:0 0 0 5; font-family:'Avenir'">
-										</form>
+											<input type="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()" 
+													placeholder="Search repository...">
+											<div style="border-bottom:1 solid #f2f2f2"></div>
+											<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light"></p>
+											<script>
+											function search_func() {
+											   var x = document.getElementById("clc_fe_s1");
+											   document.getElementById("search_res").innerHTML = "<br>" + x.value;
+											}
+											</script>
+										</div>
 									</td>
 								</tr>
 							</table>
