--- a/P_sets/index.html
+++ b/P_sets/index.html
@@ -332,11 +332,11 @@
 							<div style="width:100%; background:#f2f2f2">
 								<input type="submit" style="position: fixed; left: -10000000px;" disabled/>
 								<input type="search" class="search" results="5" autosave="10" name="s" id="clc_fe_s1" onsearch="search_func()">
-								<p id="search_res" style="margin:0 0 0 5; font-size:14; font-family:'Avenir', 'light'; color:grey"></p>
+								<p id="search_res" style="margin:0 0 0 10; font-size:14; font-family:'Avenir', 'light'; color:grey"></p>
 								<script>
 								function search_func() {
 								   var x = document.getElementById("clc_fe_s1");
-								   document.getElementById("search_res").innerHTML = "<br> >> " + x.value;
+								   document.getElementById("search_res").innerHTML = x+"\n";
 								}
 								</script>
 							</div>
